[metadata]
name = produce
version = 0.4.1
author = Kilian Evang
author_email = kilian.evang@gmail.com
url = https://github.com/texttheater/produce 
description = Replacement for Make geared towards processing data rather than compiling code
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords=
    make
    builder
    automation

[options]
packages = find:
scripts =
    produce
